--- a/conf.d/lego-api.conf
+++ b/conf.d/lego-api.conf
@@ -11,3 +11,17 @@ server {
         proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
     }
 }
+
+server {
+    listen       80;
+    listen  [::]:80;
+    server_name lego.liukaixin.online;
+
+    location / {
+        proxy_pass  http://47.93.17.251:9004;
+        proxy_redirect     off;
+        proxy_set_header   Host             $host;
+        proxy_set_header   X-Real-IP        $remote_addr;
+        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+    }
+}
