--- a/conf.d/lego-api.conf
+++ b/conf.d/lego-api.conf
@@ -18,7 +18,7 @@ server {
     server_name lego.liukaixin.online;
 
     location /api {
-        proxy_pass  http://47.93.17.251:9005;
+        proxy_pass  lego.api.liukaixin.online;
         proxy_redirect     off;
         proxy_set_header   Host             $host;
         proxy_set_header   X-Real-IP        $remote_addr;
