--- a/conf.d/lego-api.conf
+++ b/conf.d/lego-api.conf
@@ -21,11 +21,11 @@ server {
         proxy_pass  http://47.93.17.251:9004;
     }
 
-    # location /api {
-    #     proxy_pass  lego.api.liukaixin.online;
-    #     proxy_redirect     off;
-    #     proxy_set_header   Host             $host;
-    #     proxy_set_header   X-Real-IP        $remote_addr;
-    #     proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
-    # }
+    location /api {
+        proxy_pass  lego.api.liukaixin.online;
+        proxy_redirect     off;
+        proxy_set_header   Host             $host;
+        proxy_set_header   X-Real-IP        $remote_addr;
+        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+    }
 }
