--- a/conf.d/lego-api.conf
+++ b/conf.d/lego-api.conf
@@ -22,7 +22,7 @@ server {
     }
 
     location /api {
-        proxy_pass  lego.api.liukaixin.online;
+        proxy_pass  http://lego.api.liukaixin.online;
         proxy_redirect     off;
         proxy_set_header   Host             $host;
         proxy_set_header   X-Real-IP        $remote_addr;
