--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -8,6 +8,7 @@ services:
       - 80:80
     volumes:
       - ./conf.d:/etc/nginx/conf.d
+      - ./nginx.conf:/etc/nginx/nginx.conf
     networks:
       - nginx-network
 networks:
