--- a/nginx.conf
+++ b/nginx.conf
@@ -37,7 +37,7 @@ http {
     # 设置最小压缩对象大小
     gzip_min_length 1000;
     # 压缩级别（1-9，数字越大，压缩率越高，速度越慢）
-    gzip_comp_level 3;
+    # gzip_comp_level 3;
     # 用于压缩响应的缓冲区
     gzip_buffers 16 8k;
     # 指定使用 HTTP/1.1 协议
