--- a/conf.d/nginx.conf
+++ b/conf.d/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen       80;
     listen  [::]:80;
-    server_name lego.api.liukaixin.online;
+    server_name lego.api.lytt.fun;
 
     location / {
         proxy_pass  http://47.93.17.251:9005;
@@ -11,7 +11,7 @@ server {
 server {
     listen       80;
     listen  [::]:80;
-    server_name lego.liukaixin.online;
+    server_name lego.lytt.fun;
 
     location / {
         proxy_pass  http://47.93.17.251:9004;
