--- a/conf.d/nginx.conf
+++ b/conf.d/nginx.conf
@@ -17,3 +17,13 @@ server {
         proxy_pass  http://47.93.17.251:9004;
     }
 }
+
+server {
+    listen       80;
+    listen  [::]:80;
+    server_name nest.lytt.fun;
+
+    location / {
+        proxy_pass  http://47.93.17.251:16800;
+    }
+}
