--- a/conf.d/nginx.conf
+++ b/conf.d/nginx.conf
@@ -1,3 +1,19 @@
+# ERP 系统
+server {
+    listen       80;
+    listen  [::]:80;
+    server_name erp.lytt.fun;
+
+    # 前端静态资源 + API代理 (erp-web内部会代理到erp-core)
+    location / {
+        proxy_pass  http://erp-web:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+
 server {
     listen       80;
     listen  [::]:80;
