--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -5,9 +5,14 @@ services:
     restart: always
     ports:
       - 80:80
+      - 443:443
     volumes:
       - ./conf.d:/etc/nginx/conf.d
       - ./nginx.conf:/etc/nginx/nginx.conf
+      # SSL 证书目录 (Let's Encrypt)
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+      # certbot webroot 验证目录
+      - ./certbot/www:/var/www/certbot:ro
     networks:
       - nginx-network
       - erp-db-network
