--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 name: Deploy nginx-gateway
 
-# 触发条件: 推送到 master 分支或手动触发
+# 触发条件: 推送 tag 或手动触发
 on:
   push:
-    branches:
-      - master
+    tags:
+      - "v*"
   workflow_dispatch:
 
 jobs:
