--- a/conf.d/nginx-ssl.conf
+++ b/conf.d/nginx-ssl.conf
@@ -173,3 +173,51 @@ server {
         return 301 https://$host$request_uri;
     }
 }
+
+
+# m.lytt.fun - HTTPS (移动端 H5 页面)
+server {
+    listen       443 ssl http2;
+    listen  [::]:443 ssl http2;
+    server_name m.lytt.fun;
+
+    ssl_certificate     /etc/letsencrypt/live/m.lytt.fun/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/m.lytt.fun/privkey.pem;
+
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_tickets off;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+
+    add_header Strict-Transport-Security "max-age=63072000" always;
+
+    root /app/m-hub;
+    index index.html;
+
+    location / {
+        try_files $uri $uri/ $uri/index.html =404;
+    }
+
+    # 缓存策略
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2)$ {
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+    }
+}
+
+# m.lytt.fun - HTTP 重定向
+server {
+    listen       80;
+    listen  [::]:80;
+    server_name m.lytt.fun;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
