--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -13,6 +13,8 @@ services:
       - /etc/letsencrypt:/etc/letsencrypt:ro
       # certbot webroot 验证目录
       - ./certbot/www:/var/www/certbot:ro
+      # m-hub 静态文件
+      - /app/m-hub:/app/m-hub:ro
     networks:
       - nginx-network
       - erp-db-network
