--- a/conf.d/nginx-ssl.conf
+++ b/conf.d/nginx-ssl.conf
@@ -193,11 +193,11 @@ server {
 
     add_header Strict-Transport-Security "max-age=63072000" always;
 
-    root /app/m-hub;
+    root /app/m-hub/dist;
     index index.html;
 
     location / {
-        try_files $uri $uri/ $uri/index.html =404;
+        try_files $uri $uri/ /index.html;
     }
 
     # 缓存策略
