--- a/conf.d/nginx-ssl.conf
+++ b/conf.d/nginx-ssl.conf
@@ -197,7 +197,7 @@ server {
     index index.html;
 
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ $uri/index.html =404;
     }
 
     # 缓存策略
