--- a/conf.d/nginx-ssl.conf
+++ b/conf.d/nginx-ssl.conf
@@ -193,7 +193,7 @@ server {
 
     add_header Strict-Transport-Security "max-age=63072000" always;
 
-    root /app/m-hub/dist;
+    root /app/m-hub;
     index index.html;
 
     location / {
