--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,9 +36,8 @@ jobs:
           script: |
             cd /app/nginx-app
 
-            # 重新加载配置（不中断服务）
-            docker compose -f docker-compose-prod.yml exec -T nginx nginx -s reload || \
-            docker compose -f docker-compose-prod.yml up -d
+            # 重建容器以应用新的 volume 挂载和配置
+            docker compose -f docker-compose-prod.yml up -d --force-recreate
 
             # 查看状态
             docker compose -f docker-compose-prod.yml ps
